simple_http_client_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-http-client
  labels:
    app: simple-http-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-http-client
  template:
    metadata:
      labels:
        app: simple-http-client
    spec:
      containers:
      - name: simple-http-client
        image: mohanaprakash/simple_http_client:1.3
