simple_http_server_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-http-server
  labels:
    app: simple-http-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: simple-http-server
  template:
    metadata:
      labels:
        app: simple-http-server
    spec:
      topologySpreadConstraints:
      - maxSkew: 1
        topologyKey: zone
        whenUnsatisfiable: DoNotSchedule
        labelSelector:
          matchLabels:
            app: simple-http-server
      containers:
      - name: simple-http-server
        image: mohanaprakash/simple_http_server:1.2
        ports:
        - containerPort: 8080
        
---
apiVersion: v1
kind: Service
metadata:
  name: simple-http-server-service
spec:
  selector:
    app: simple-http-server
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
